--- a/SQL_Db/sql_agent.ipynb
+++ b/SQL_Db/sql_agent.ipynb
@@ -177,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_user = \"root\"\n",
-    "db_password = \"root\"\n",
+    "db_user = \"####\"\n",
+    "db_password = \"####\"\n",
     "db_host = \"localhost\"  \n",
     "db_port = \"3306\"  \n",
     "db_name = \"classicmodels\"\n",
