--- a/SQL_Db/NL2SQL.ipynb
+++ b/SQL_Db/NL2SQL.ipynb
@@ -1590,7 +1590,7 @@
     "         MessagesPlaceholder(variable_name=\"messages\"),\n",
     "         (\"human\", \"{input}\"),\n",
     "     ]\n",
-    "     \n",
+    "      \n",
     " )\n"
    ]
   },
@@ -1600,7 +1600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "generate_query = create_sql_query_chain(llm, db,final_prompt)\n",
     "chain =(RunnablePassthrough.assign(selected_tables=table_chain)|\n",
     "       RunnablePassthrough.assign(query=generate_query).assign(\n",
     "        result=itemgetter(\"query\") | execute_query_tool)) | rephrase_answer\n",
