--- a/SQL_Db/NL2SQL.ipynb
+++ b/SQL_Db/NL2SQL.ipynb
@@ -625,18 +625,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'The top 5 products with the highest total sales revenue are:\\n1. 1992 Ferrari 360 Spider red - $276,839.98\\n2. 2001 Ferrari Enzo - $190,755.86\\n3. 1952 Alpine Renault 1300 - $190,017.96\\n4. 2003 Harley-Davidson Eagle Drag Bike - $170,686.00\\n5. 1968 Ford Mustang - $161,531.48'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'chain' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mchain\u001b[49m\u001b[38;5;241m.\u001b[39minvoke({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFind the top 5 products with the highest total sales revenue\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'chain' is not defined"
+     ]
     }
    ],
    "source": [
